<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74ff1d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsTextView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/SelectDomain"
            android:id="@+id/selectDomainTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/domainSpinner"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Strategy"
            android:id="@+id/insertUserTextView"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/userEditText"
            android:layout_weight="0.5"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:id="@+id/insertPasswordTextView"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:layout_weight="0.5"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/SelectInterval"
            android:id="@+id/selectIntervalTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/intervalSpinner"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectSecurities"
            android:id="@+id/selectSecuritiestextView"
            android:gravity="center" />

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secsSelectedGridView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/settingsCancelButton"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:id="@+id/settingsOKButton"
            android:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>