<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74ff1d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tradeModifySecTextView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/SelectNewAmount"
            android:id="@+id/selectTradeModifyAmountTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tradeModifyAmountSpinner"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/SelectNewPrice"
            android:id="@+id/selectTradeModifyPriceTextView"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tradeModifyPriceEditText"
            android:layout_weight="0.5" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tradeModifyMessageTextView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/tradeModifyCancelButton"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:id="@+id/tradeModifyOKButton"
            android:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>