<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id = "@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height = "wrap_content"
                android:gravity="center"
                android:text="@string/Start"
                android:enabled="false"
                android:layout_weight="0.5">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Stop"
                android:id="@+id/stopButton"
                android:layout_weight="0.5" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateTimeTextView" />

        <GridView
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:id="@+id/pricesGridView"
            android:numColumns="3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/SelectAmount"
                android:id="@+id/selectAmountTextView"
                android:layout_weight="0.5" />

            <Spinner
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/amountSpinner"
                android:clickable="false"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/LinearLayout">

            <TextView
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/SelectTI"
                android:id="@+id/selectTITextView"
                android:layout_weight="0.5" />

            <Spinner
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/TISpinner"
                android:layout_weight="0.5" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
